spacing fixes, good autosizing

--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -17,8 +17,8 @@ body {
         }
         color: $dark-color;
         font-family: $page-title-font;
-        font-size: 94px;
-        line-height: 66px;
+        font-size: 10vw;
+        line-height: 8vw;
     }
 }
 
