--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -19,17 +19,16 @@ main {
     .mahGrid {
         display: grid;
         grid-template-columns: 3fr 2fr 2fr 2fr 1fr 1fr;
-        grid-template-rows: auto 1fr auto;
+        grid-template-rows: minmax(auto, 24vw) 1fr auto;
     }
 }
-
 
 .homepageTitleBlock {
     grid-column: span 2;
     background: red;
     padding-left: 20%;
     padding-right: 20%;
-    padding-top: 10%;
+    padding-top: 7%;
     padding-bottom: 10%;
 }
 @media (min-width: 768px) {
@@ -41,7 +40,7 @@ main {
 .homepageAboutBlock {
     grid-column: span 2;
     padding-top: 15%;
-    padding-left: 10%;
+    padding-left: 15%;
     padding-right: 10%;
     padding-bottom: 5%;
 }
@@ -51,6 +50,9 @@ main {
     padding: 20px;
     padding-top: 60px;
     margin: 0px;
+    i {
+        padding: 8px;
+    }
 }
 
 .homepagePictureBlock {
